# CrowdScope

./: .gitignore  README.md  commands_pyinstaller.txt
crowdScope/: 2.txt  __init__.py  analysis_faces.ipynb  crowdscope.kv  generate_faces.py  main.py  pyproject.toml  requirements.txt  search.kv
crowdScope/assets/weights/: best_cls_age.pt  best_cls_gender.pt
crowdScope/conf/: conf.py
crowdScope/utils/: __init__.py  age_gender.py  draw_boxes.py  layout.py  preprocess_face.py  process_image.py  style_app.py
