[tool.poetry]
name = "crowdScope"
version = "0.1.0"
description = ""
authors = ["WikiGenius <muhammedelyamani92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kivy = "^2.1.0"
kivymd = "^1.1.1"
plyer = "^2.1.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
